# dieter

./: .gitignore  README.md  config.yaml.template  pyproject.toml
src/: __main__.py  cli.py  config.yaml  logging_config.py
src/browser_agent/: __init__.py  agent.py  analysis.py  browser.py  browser_extensions.py  commands.py  config.py  interaction.py
src/omniparser/: __init__.py  parser.py
src/omniparser/utils/: __init__.py  annotations.py  boxes.py  colors.py
src/prompts/: browser.py
src/utils/: __init__.py  rich.py
